Z-index issue fixed and disabled links grayed out on mobile

--- a/scss/_ru_navigation.scss
+++ b/scss/_ru_navigation.scss
@@ -97,6 +97,13 @@
 			cursor: pointer;
 		}
 	}
+	.disabled {
+			
+		a, a:hover {
+			color: #ccc;
+			cursor: default;
+		}
+	}
 	ul li ul {
 		display: none;
 
@@ -193,7 +200,7 @@
 		border-bottom: transparent 1px solid;
 		padding: 25px 25px 20px 35px;
 		margin: -1px -1px 0 -1rem;
-		z-index: 999;
+		z-index: 1000;
 
 		&:hover, &:active, &:focus, &:visited {
 			color: $ru_green;
@@ -228,7 +235,7 @@
 	}
 	.dl-nav {
 		float: none;
-		z-index: 99;
+		z-index: 998;
 		position: absolute;
 		top: 64px;
 		left: 0;
@@ -266,14 +273,6 @@
 				color: $ru_green;
 			}
 
-		}
-
-		.disabled {
-			
-			a {
-				color: #ccc;
-				cursor: default;
-			}
 		}
 
 		ul li ul {
